testsuite/tests/structs/public_md/test.lkt
# Test that structure types are properly bound in public APIs

import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- list+(Example("example"))
}

@abstract
class FooNode implements Node[FooNode] {
    @exported
    fun get_md(): Metadata = Metadata()
}

class Example: FooNode implements TokenNode {
}
